[package]
name = "serverless-link-shortener-chapter-04-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.11"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde = "1.0"
serde_json = "1.0"
cuid2 = "0.1"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.31"
reqwest = { version = "0.12", default_features = false, features = [
  "rustls-tls",
  "http2",
] }
scraper = "0.16"


[dev-dependencies]
