[workspace]
resolver = "2"
members = [
  "examples/otel-simple",
  "examples/sqs-receive-traced-message",
  "examples/sqs-sendmessage-structured",
  "examples/lambda-process-sqs",
  "shared",
  "lambdas/create_link",
  "lambdas/get_links",
  "lambdas/visit_link",
  "lambdas/process_link_created",
  "lambdas/process_link_clicked",
  "integration-tests",
]
