[package]
name = "serverless_link_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.11.1"

tokio = { version = "1", features = ["macros"] }

serde = "1.0.203"
serde_json = "1.0.117"

rand = "0.8"

lazy_static = "1.4.0"

cuid2 = "0.1.2"

[[bin]]
name = "serverless_link_shortener"
path = "src/main.rs"
test = false