[package]
name = "serverless-link-shortener-chapter-04"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.11.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.203"
serde_json = "1.0.117"
cuid2 = "0.1.2"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.31.1"
reqwest = { version = "0.12.5", default_features = false, features = [
  "rustls-tls",
  "http2",
] }
scraper = "0.16"


[dev-dependencies]
