[package]
name = "create_link"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
lambda_http = "0.11"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.31"
serde_json = "1.0"
async-trait = "0.1.81"

[dev-dependencies]
mockall = "0.13.0"