[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dev-dependencies]
mockall = "0.13.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
shared = { path = "../shared" }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = "1.41.0"
reqwest = "0.13"
