[package]
name = "lambda-process-kinesis-failure"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "1.0.3", default-features = false, features = [
  "kinesis",
  "streams",
] }
serde_json = "1.0"
serde = "1.0.228"
lambda_runtime = "1.0.1"
tokio = { version = "1", features = ["macros"] }
rand = "0.9.2"
