[package]
name = "lambda-process-kinesis"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "1.0.0", default-features = false, features = [
  "kinesis",
] }
serde_json = "1.0"
serde = "1.0.228"
lambda_runtime = "1.0.1"
tokio = { version = "1", features = ["macros"] }
