[package]
name = "process_link_created"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "1.0.0", default-features = false, features = [
  "sqs",
] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.31"
shared = { path = "../../shared" }
serde_json = "1.0"
figment = { version = "0.10.19", features = ["env"] }
serde = "1.0.228"
lambda_runtime = "1.0.1"
tokio = { version = "1", features = ["macros"] }
futures = "0.3.31"

[dev-dependencies]
shared = { path = "../../shared", features = ["mocks"] }
mockall = "0.13"
