[package]
name = "sqs-send-traced-message"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.90.0"
serde_json = "1.0"
serde = "1.0.228"
cloudevents-sdk = "0.9.0"
cuid2 = "0.1"

opentelemetry = "0.31.0"
tracing = "0.1.43"