[package]
name = "visit_link"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
shared = { path = "../../shared" }
lambda_http = "0.14"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.31"
figment = { version = "0.10.19", features = ["env"] }
aws-sdk-kinesis = "1.96.1"
serde = "1.0.228"
serde_json = "1.0"

opentelemetry = "0.31.0"
tracing = "0.1.43"
cloudevents-sdk = "0.9.0"

[dev-dependencies]
shared = { path = "../../shared", features = ["mocks"] }
mockall = "0.13"
